--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
             <nav id="navbar">
 
-                <img src="img/logo.png" alt="" class="logo">
+                <img src="img/logo1.png" alt="" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#services">Services</a></li>
@@ -37,7 +36,7 @@
             <div class="header-text">
                 <h3> Web DEVELOPER</h3>
                 <h3>JAVA DEVELOPER</h3>
-                <h1>I am <span>Somnath Mapa</span><br> from PatherPratima</h1>
+                <h1>I am <span>Somnath Mapa</span><br> from India</h1>
             </div>
             <!-- <img class="dou" src="img/fob.jpeg" alt="" > -->
         </div>
@@ -58,8 +57,10 @@
                 <div class="col-2">
                     <h1 class="h-primary">About Me</h1>
                     <p>I am Somnath Mapa. I currently Persuing <span>B.TECh IT</span> at Maulana Abul Kalam Azad
-                        University of Technology,West Bengal . I am currently in 4TH year (8th)sem.MY CGPA was 7.62in
-                        the previous Year. </p>
+                        University of Technology,West Bengal .With a strong foundation in JAVA development and
+                        WEB development , I excel in building dynamic web applications and crafting intelligent
+                        algorithms. My passion for problem-solving drives me to continuously explore new technologies
+                        and create impactful solutions. </p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -83,8 +84,8 @@
                     <div class="tab-contents" id="experience">
 
                         <ul>
-                            <li><span>2022-Current</span><br>Persuing B.Tech IT</li>
-                            <li><span>2021</span><br>Diploma In Computer Science & Technology</li>
+                            <li><span>2022-2023</span><br>Web development intern</li>
+                            <li><span>2021</span><br>Java Development intern</li>
                             <!-- <li><span>2020</span><br>B.Tech IT 1st </li> -->
                         </ul>
                     </div>
@@ -114,13 +115,18 @@
         <div class="container">
             <h1 class="h-primary">My Services</h1>
             <div class="services-list">
+
                 <div class="w1">
                     <i class="fa_fa-code"></i>
                     <h2>Java Web Development</h2>
-                    <p>Our network of java subject matter experts comprises of professionals with a deeper understanding
-                        of Java web architecture and engineering ecosystem. As web design service provider i help you
-                        with a customized website design that's perfect for your business or personal site. They'll work
-                        with you to create a design that matches your brand, while giving your customers a seamless
+                    <p>Our network of java subject matter experts comprises of professionals with a deeper
+                        understanding
+                        of Java web architecture and engineering ecosystem. As web design service provider i
+                        help you
+                        with a customized website design that's perfect for your business or personal site.
+                        They'll work
+                        with you to create a design that matches your brand, while giving your customers a
+                        seamless
                         user experience that will delight them.
                     </p>
                     <a href="#">Learn More</a>
@@ -128,10 +134,14 @@
                 <div class="w2">
                     <i class="fas_fa-crop-alt"></i>
                     <h2>Enterprise Java Development</h2>
-                    <p>Through market research, prototyping, and state-of-the-art infrastructure, we can help you bulid
-                        custom Enterprise java Development solutios that are capable of transfering core operations and
-                        scaling new opportunities. User interface design or user interface engineering is the design of
-                        user interfaces for machines and software, such as computers, home appliances, mobile devices,
+                    <p>Through market research, prototyping, and state-of-the-art infrastructure, we can help
+                        you bulid
+                        custom Enterprise java Development solutios that are capable of transfering core
+                        operations and
+                        scaling new opportunities. User interface design or user interface engineering is the
+                        design of
+                        user interfaces for machines and software, such as computers, home appliances, mobile
+                        devices,
                         and other electronic devices, with the focus on maximizing usability
                         and the user experien of transfering core operations and scalingce.</p>
                     <a href="#">Learn More</a>
@@ -139,8 +149,10 @@
                 <div class="w3">
                     <i class="fab_fa-app-store"></i>
                     <h2>Java Mobile Development</h2>
-                    <p>We build lightweight, high performing, and platform-independent Java Mobile Developmentsolution
-                        to help you gain unprecedented value. We consequuntur accusamus eius esse veniam distinctio
+                    <p>We build lightweight, high performing, and platform-independent Java Mobile
+                        Developmentsolution
+                        to help you gain unprecedented value. We consequuntur accusamus eius esse veniam
+                        distinctio
                         accusantium cumque, doloribus maxime voluptas?</p>
                     <a href="#">Learn More</a>
                 </div>
@@ -159,8 +171,10 @@
                     <img src="img/work-1.png" alt="Error loding">
                     <div class="layer">
                         <h3>Scoial Media</h3>
-                        <p>Social media are interactive Web 2.0 Internet-based applications. User-generated content—such
-                            as text posts or comments, digital photos or videos, and data generated through all online
+                        <p>Social media are interactive Web 2.0 Internet-based applications. User-generated
+                            content—such
+                            as text posts or comments, digital photos or videos, and data generated through all
+                            online
                             interactions—is the lifeblood of social media.</p>
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                     </div>
@@ -169,8 +183,10 @@
                     <img src="img/work-2.png" alt="Error loding">
                     <div class="layer">
                         <h3>E-Commerse web</h3>
-                        <p>There are three main types of e-commerce: business-to-business (websites such as Shopify),
-                            business-to-consumer (websites such as Amazon), and consumer-to-consumer (websites such as
+                        <p>There are three main types of e-commerce: business-to-business (websites such as
+                            Shopify),
+                            business-to-consumer (websites such as Amazon), and consumer-to-consumer (websites such
+                            as
                             eBay)</p>
                         <a href="#"><i class="fas fa-external-link-alt"></i></a>
                     </div>
