--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
 
                         <ul>
 
-                            <li><span>Java</span><br>Familer with this language with experience of 6years</li>
-                            <li><span>C</span><br>Familer with this language with experience of 4 years</li>
-                            <li><span>HTML</span><br>Familer with this language with experience of 6years</li>
-                            <li><span>CSS</span><br>Familer with this language with experience of 6Years</li>
-                            <li><span>JS</span><br>Familer with this language with experience of 3year</li>
+                            <li><span>Java</span><br>Familer with this language with experience of 4 years</li>
+                            <li><span>C</span><br>Familer with this language with experience of 3 years</li>
+                            <li><span>HTML</span><br>Familer with this language with experience of 4 years</li>
+                            <li><span>CSS</span><br>Familer with this language with experience of 4 Years</li>
+                            <li><span>JS</span><br>Familer with this language with experience of 3 year</li>
                             <li><span>MySql</span><br>Familer with this language with experience of 3 years</li>
                             <li><span>React.JS</span><br>Familer with this language with experience of 2 years</li>
+                            <li><span>Next.JS</span><br>Familer with this language with experience of 2 years</li>
+
 
                         </ul>
                     </div>
@@ -92,7 +94,7 @@
                     <div class="tab-contents" id="education">
 
                         <ul>
-                            <li><span>2021--Continue</span><br>B.TEch IT</li>
+                            <li><span>2024</span><br>B.Tech in Information Technology</li>
                             <li><span>2021</span><br>Completed Diploma in Computer Science & Technology</li>
                             <li><span>2018</span><br>Completed Higher Secondary Education</li>
                         </ul>
@@ -117,17 +119,10 @@
             <div class="services-list">
 
                 <div class="w1">
-                    <i class="fa_fa-code"></i>
-                    <h2>Java Web Development</h2>
-                    <p>Our network of java subject matter experts comprises of professionals with a deeper
-                        understanding
-                        of Java web architecture and engineering ecosystem. As web design service provider i
-                        help you
-                        with a customized website design that's perfect for your business or personal site.
-                        They'll work
-                        with you to create a design that matches your brand, while giving your customers a
-                        seamless
-                        user experience that will delight them.
+                    <i class="fa_fa-code" aria-hidden="true"></i>
+                    <h2>Frontend Devlopment</h2>
+                    <p>Crafting engaging, responsive web interfaces using HTML, CSS, and JavaScript for seamless user
+                        experiences.
                     </p>
                     <a href="#">Learn More</a>
                 </div>
@@ -148,7 +143,7 @@
                 </div>
                 <div class="w3">
                     <i class="fab_fa-app-store"></i>
-                    <h2>Java Mobile Development</h2>
+                    <h2>Java mobile Development</h2>
                     <p>We build lightweight, high performing, and platform-independent Java Mobile
                         Developmentsolution
                         to help you gain unprecedented value. We consequuntur accusamus eius esse veniam
