--- a/index.html
+++ b/index.html
@@ -71,14 +71,14 @@
 
                         <ul>
 
-                            <li><span>Java</span><br>Familer with this language with experience of 4 years</li>
-                            <li><span>C</span><br>Familer with this language with experience of 3 years</li>
-                            <li><span>HTML</span><br>Familer with this language with experience of 4 years</li>
-                            <li><span>CSS</span><br>Familer with this language with experience of 4 Years</li>
-                            <li><span>JS</span><br>Familer with this language with experience of 3 year</li>
-                            <li><span>MySql</span><br>Familer with this language with experience of 3 years</li>
-                            <li><span>React.JS</span><br>Familer with this language with experience of 2 years</li>
-                            <li><span>Next.JS</span><br>Familer with this language with experience of 2 years</li>
+                            <li><span>Java</span><br>Familer with this language of 6 years</li>
+                            <li><span>C</span><br>Familer with this language of 3 years</li>
+                            <li><span>HTML</span><br>Familer with this language of 6 years</li>
+                            <li><span>CSS</span><br>Familer with this language of 6 Years</li>
+                            <li><span>JS</span><br>Familer with this languag of 3 year</li>
+                            <li><span>MySql</span><br>Familer with this language of 3 years</li>
+                            <li><span>React.JS</span><br>Familer with this language of 2 years</li>
+                            <li><span>Next.JS</span><br>Familer with this languag of 2 years</li>
 
 
                         </ul>
