--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
                             <li><span>CSS</span><br>Familer with this language of 6 Years</li>
                             <li><span>JS</span><br>Familer with this languag of 3 year</li>
                             <li><span>MySql</span><br>Familer with this language of 3 years</li>
-                            <li><span>React.JS</span><br>Familer with this language of 2 years</li>
-                            <li><span>Next.JS</span><br>Familer with this languag of 2 years</li>
+                            <li><span>PHP</span><br>Familer with this language of 4 years</li>
+                            <li><span>IoT</span><br>Familer with this languag of 3 years</li>
 
 
                         </ul>
